
* In C-Find queries including GenericGroupLength tags, Orthanc was still
  extracting these tags from the storage although they were already ignored
  and not returned in the response.  
  They are now removed from the query earlier to avoid this disk access that 
  could slow down the response time.  Note that this seems to happen mainly 
  when the query originates from some GE devices (AWS).


REST API
--------

* API version upgraded to 24
* Added "MaximumPatientCount" in /system



Version 1.12.3 (2024-01-31)
===========================

General
-------

* Performance of databases:
  - At startup, if using a database plugin, displays the latency to access the DB.
  - Added support for new DB primitives to enable the "READ COMMITTED"
    transaction mode in the PostgreSQL plugin.

REST API
--------

* API version upgraded to 23
* Added a 'KeepLabels' option in /modify routes (default = false)

Maintenance
-----------

* Upgraded dependencies for static builds:
  - boost 1.84.0
  - curl 8.5.0
  - dcmtk 3.6.8
  - jsoncpp 1.9.5
  - libjpeg 9f
  - libpng 1.6.40
  - openssl 3.1.4
  - pugixml 1.14
  - zlib 1.3.1


Version 1.12.2 (2023-12-19)
===========================

General
-------

* Performance:
  - Allow multiple plugins to use the plugin SDK at the same time.  In previous versions,
    functions like instance transcoding or instance reading where mutually exclusive.
    This can bring some significant improvements, especially in viewers.
  - Optimized the StorageCache to prevent loading the same file multiple times if
    multiple users request the same file at the same time.
  - The StorageCache is now also storing transcoded instances that have been requested by /file?transcode=...
    that is now used by the DICOMweb plugin.  This speeds up retrieval of transcoded frames through WADO-RS.
  - Now displaying timings when reading from/writing to disk in the verbose logs.
* HTTP compression: